--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -36,6 +36,7 @@
     <string name="drawer_Settings_long">Change App Settings</string>
     <string name="drawer_about">About</string>
     <string name="drawer_about_long">About Us</string>
+    <string name="navigation_re_long">Show all Real Estate</string>
 
 
 </resources>
